- Added pick block functionality to Cannon Carriage entity (yields its item)
- Added flak and shrapnel burst cloud effects
 - Has appearance and visibility client config options
 - Amount of particles can also be configured in the shrapnel
- Added new burst sounds for flak and shrapnel
Removed:
- Removed legacy cannon plume appearance client config, can now only turn plumes on or off in clientside config
Changed:
- Updated Ritchie's Projectile Library dependency to 2.0.0
 - Improved chunkloading performance
 - Replaced PreciseProjectile interface with tag #ritchiesprojectilelib:precise_motion
 - Changed screen shake to use Ritchies Projectile Library code rather than Create Big Cannons code
- Changed how cannon trails are done
- Separated smoke shell smoke particle (createbigcannons:smoke_shell_smoke) from cannon smoke particle (createbigcannons:cannon_smoke)
 - Both still use the same textures and particle definition by default
- Changed how big cannon plumes look
- Changed description of some ponder categories
- Rework cannon plume to use better particles
- Changed default cannon mount angle goggle display precision from 1 to 2 digits
- Improved cannon heating ponder information to clarify layering
- Improved sound effects of cannon firing
- Tweaked speed and entity damage attributes of Drop Mortar Shell
Fixed:
- Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name
- Fixed cannon loader pushing without head
- Fixed lag from cannon being tested during explosion, courtesy of Endalion
- Fixed Disable All Failures config option not disabling squibbing
- Fixed manual autocannons breaking on tick after squib
- Fixed Create Big Cannons projectiles exceeding 10 m/gt (200 m/gt) losing their velocity when loaded
- Fixed Smoke Shell and Drop Mortar Shell being invalid blocks for createbigcannons:fuzed_block block entity
- Fixed Cannon Carriage rotation info tooltip and syncing